kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instakash-landing
  namespace: instakash-dev
  labels:
    app: instakash-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instakash-landing
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: instakash-landing
    spec:
      affinity: {}
      restartPolicy: Always
      containers:
      - name: landing
        image: 160743850946.dkr.ecr.us-east-1.amazonaws.com/instakash-landing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: 100M
            cpu: 100m
