kubernetes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: instakash-landing
  name: instakash-landing
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: instakash-landing
  type: "ClusterIP"
